--- a/.github/workflows/image-creator.yml
+++ b/.github/workflows/image-creator.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           echo $PWD
           ls -l
-          docker build -t ${{ matrix.image }} build/${{ matrix.image }}-build
+          docker build -t ${{ matrix.image }} Docker/${{ matrix.image }}-build
       - name: tag
         run: |
           docker tag ${{ matrix.image }} ghcr.io/key4hep/${{ matrix.image }}:latest
