--- a/.github/workflows/image-creator.yml
+++ b/.github/workflows/image-creator.yml
@@ -17,7 +17,7 @@ jobs:
   build:
     strategy:
       matrix:
-        image: ["centos7", "alma9", "ubuntu"]
+        image: ["centos7", "alma9", "ubuntu22"]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
