Add pkg-config to ubuntu

--- a/Docker/ubuntu22-build/Dockerfile
+++ b/Docker/ubuntu22-build/Dockerfile
@@ -1,5 +1,5 @@
 FROM ubuntu:22.04
 
-RUN apt update -y && apt install -y build-essential git python3 vim unzip gfortran file curl
+RUN apt update -y && apt install -y build-essential git python3 vim unzip gfortran file curl pkg-config
 
 CMD ["/bin/bash"]
