--- a/Docker/alma9-build/Dockerfile
+++ b/Docker/alma9-build/Dockerfile
@@ -2,6 +2,6 @@ FROM gitlab-registry.cern.ch/linuxsupport/alma9-base
 
 # epel-release and parallel needed for the validation
 RUN dnf update -y && dnf groupinstall -y "Development Tools" && dnf install -y which vim gfortran python3-pip epel-release parallel
-pip install boto3
+RUN pip install boto3
 
 CMD ["/bin/bash"]
