Add the GL and GLU libraries and headers

--- a/Docker/centos7-build/Dockerfile
+++ b/Docker/centos7-build/Dockerfile
@@ -1,6 +1,6 @@
 FROM gitlab-registry.cern.ch/linuxsupport/cc7-base
 
-RUN yum update -y && yum groupinstall -y "Development Tools" && yum install -y epel-release python3 which vim python3-pip
+RUN yum update -y && yum groupinstall -y "Development Tools" && yum install -y epel-release python3 which vim python3-pip mesa-libGL mesa-libGL-devel mesa-libGLU mesa-libGLU-devel
 RUN pip3 install boto3 requests
 
 CMD ["/bin/bash"]
