--- a/Docker/alma9-build/Dockerfile
+++ b/Docker/alma9-build/Dockerfile
@@ -1,8 +1,7 @@
 FROM gitlab-registry.cern.ch/linuxsupport/alma9-base
 
 # epel-release and parallel needed for the validation
-RUN dnf update -y && dnf groupinstall -y "Development Tools" && dnf install -y vim gfortran python3-pip epel-release
-RUN dnf install -y parallel
+RUN dnf update -y && dnf groupinstall -y "Development Tools" && dnf install -y vim gfortran python3-pip epel-release parallel mesa-libGL mesa-libGL-devel mesa-libGLU mesa-libGLU-devel
 RUN pip install boto3 requests
 
 CMD ["/bin/bash"]
