--- a/.github/workflows/image-creator.yml
+++ b/.github/workflows/image-creator.yml
@@ -16,6 +16,7 @@ jobs:
     strategy:
       matrix:
         image: ["centos7", "alma9", "ubuntu22"]
+      fail-fast: false
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
