Change the place of ccache

--- a/Docker/alma9/alma9-build/Dockerfile
+++ b/Docker/alma9/alma9-build/Dockerfile
@@ -4,8 +4,8 @@ FROM gitlab-registry.cern.ch/linuxsupport/alma9-base
 # wget needed for some tests
 RUN dnf update -y && \
     dnf groupinstall -y "Development Tools" && \
-    dnf install -y vim gfortran wget python3-pip epel-release mesa-libGL mesa-libGL-devel mesa-libGLU mesa-libGLU-devel krb5-devel ccache && \
-    dnf install -y parallel && \
+    dnf install -y vim gfortran wget python3-pip epel-release mesa-libGL mesa-libGL-devel mesa-libGLU mesa-libGLU-devel krb5-devel && \
+    dnf install -y parallel ccache && \
     dnf clean all
 
 RUN pip install boto3 requests
