--- a/Docker/ubuntu22/ubuntu22-build/Dockerfile
+++ b/Docker/ubuntu22/ubuntu22-build/Dockerfile
@@ -4,7 +4,7 @@ FROM ubuntu:22.04
 RUN apt update -y && \
     apt upgrade -y && \
     DEBIAN_FRONTEND=noninteractive apt install -y \
-    build-essential git python3 python3-pip vim unzip gfortran file curl wget pkg-config rsync tzdata libgl1-mesa-glx libgl1-mesa-dev libglu1-mesa libglu1-mesa-dev libkrb5-dev ccache && \
+    build-essential git python3 python3-pip vim unzip gfortran file curl wget pkg-config rsync tzdata libgl1-mesa-glx libgl1-mesa-dev libglu1-mesa libglu1-mesa-dev libkrb5-dev ccache mold && \
     apt clean && \
     rm -rf /var/lib/apt/lists/*
 
