Build Ubuntu 24.04 images in CI

--- a/.github/workflows/image-creator.yml
+++ b/.github/workflows/image-creator.yml
@@ -15,7 +15,7 @@ jobs:
   build:
     strategy:
       matrix:
-        image: ["alma9", "ubuntu22"]
+        image: ["alma9", "ubuntu22", "ubuntu24"]
       fail-fast: false
     runs-on: ubuntu-latest
     steps:
