--- a/.github/workflows/image-creator.yml
+++ b/.github/workflows/image-creator.yml
@@ -10,6 +10,10 @@ on:
   push:
   workflow_dispatch:
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   # Image for running key4hep
   build:
