--- a/.github/workflows/image-creator.yml
+++ b/.github/workflows/image-creator.yml
@@ -10,6 +10,9 @@ on:
   push:
   workflow_dispatch:
 
+env:
+  REGISTRY: ghcr.io
+
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
@@ -24,31 +27,59 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: build
-        run: |
-          echo $PWD
-          ls -l
-          cd Docker/${{ matrix.image }}
-          ./build.sh
-      - name: tag
-        run: |
-          docker tag ${{ matrix.image }} ghcr.io/key4hep/key4hep-images/${{ matrix.image }}:latest
-          docker tag ${{ matrix.image }}-cvmfs ghcr.io/key4hep/key4hep-images/${{ matrix.image }}-cvmfs:latest
-      - name: show
-        run: docker images
-      - name: login and push
-        env:
-          deploy_secret: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          if [ ! -z ${deploy_secret} ]; then
-            echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io --username ${{ github.actor }} --password-stdin;
-            docker push ghcr.io/key4hep/key4hep-images/${{ matrix.image }}:latest;
-            docker push ghcr.io/key4hep/key4hep-images/${{ matrix.image }}-cvmfs:latest;
-          else
-            echo "Skipping deploy no secrets present";
-          fi
-
-            # Image for running key4hep
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Login to DockerHub
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Docker Meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ github.repository_owner }}/key4hep-images
+      - name: Build and Push
+        id: docker_build
+        uses: docker/build-push-action@v6
+        with:
+          push: true
+          context: ./Docker/${{ matrix.image }}
+          file: ./Docker/${{ matrix.image }}/Dockerfile
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+  build-cvmfs:
+    needs: build
+    strategy:
+      matrix:
+        image: ["alma9", "ubuntu22", "ubuntu24"]
+      fail-fast: false
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Login to DockerHub
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Docker Meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ github.repository_owner }}/key4hep-images
+      - name: Build and Push
+        id: docker_build
+        uses: docker/build-push-action@v6
+        with:
+          push: true
+          context: ./Docker/${{ matrix.image }}
+          file: ./Docker/${{ matrix.image }}-cvmfs/Dockerfile
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
   build-arm:
     needs: build
     strategy:
@@ -58,26 +89,56 @@ jobs:
     runs-on: ubuntu-24.04-arm
     steps:
       - uses: actions/checkout@v4
-      - name: build
-        run: |
-          echo $PWD
-          ls -l
-          cd Docker/${{ matrix.image }}
-          ./build.sh
-      - name: tag
-        run: |
-          docker tag ${{ matrix.image }} ghcr.io/key4hep/key4hep-images/${{ matrix.image }}:latest
-          docker tag ${{ matrix.image }}-cvmfs ghcr.io/key4hep/key4hep-images/${{ matrix.image }}-cvmfs:latest
-      - name: show
-        run: docker images
-      - name: login and push
-        env:
-          deploy_secret: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          if [ ! -z ${deploy_secret} ]; then
-            echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io --username ${{ github.actor }} --password-stdin;
-            docker push ghcr.io/key4hep/key4hep-images/${{ matrix.image }}:latest;
-            docker push ghcr.io/key4hep/key4hep-images/${{ matrix.image }}-cvmfs:latest;
-          else
-            echo "Skipping deploy no secrets present";
-          fi
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Login to DockerHub
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Docker Meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ github.repository_owner }}/key4hep-images
+      - name: Build and Push
+        id: docker_build
+        uses: docker/build-push-action@v6
+        with:
+          push: true
+          context: ./Docker/${{ matrix.image }}
+          file: ./Docker/${{ matrix.image }}-build/Dockerfile
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+  build-arm-cvmfs:
+    needs: build-arm
+    strategy:
+      matrix:
+        image: ["alma9", "ubuntu22", "ubuntu24"]
+      fail-fast: false
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Login to DockerHub
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Docker Meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ github.repository_owner }}/key4hep-images
+      - name: Build and Push
+        id: docker_build
+        uses: docker/build-push-action@v6
+        with:
+          push: true
+          context: ./Docker/${{ matrix.image }}
+          file: ./Docker/${{ matrix.image }}-cvmfs/Dockerfile
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
