--- a/.github/workflows/image-creator.yml
+++ b/.github/workflows/image-creator.yml
@@ -78,6 +78,8 @@ jobs:
           push: true
           context: ./Docker/${{ matrix.image }}/${{ matrix.image }}-cvmfs
           file: ./Docker/${{ matrix.image }}/${{ matrix.image }}-cvmfs/Dockerfile
+          build-args: |
+            REPOSITORY=${{ github.repository }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
   build-arm:
@@ -140,5 +142,7 @@ jobs:
           push: true
           context: ./Docker/${{ matrix.image }}/${{ matrix.image }}-cvmfs
           file: ./Docker/${{ matrix.image }}/${{ matrix.image }}-cvmfs/Dockerfile
+          build-args: |
+            REPOSITORY=${{ github.repository }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
