--- a/Docker/alma9/alma9-cvmfs/Dockerfile
+++ b/Docker/alma9/alma9-cvmfs/Dockerfile
@@ -1,4 +1,5 @@
-FROM alma9
+ARG REPOSITORY=key4hep
+FROM ${REPOSITORY}/key4hep-images/alma9
 
 RUN dnf install -y https://ecsft.cern.ch/dist/cvmfs/cvmfs-release/cvmfs-release-latest.noarch.rpm && \
     dnf install -y cvmfs && \
