switching to a template

--- a/Docker/ubuntu22/ubuntu22-cvmfs/Dockerfile
+++ b/Docker/ubuntu22/ubuntu22-cvmfs/Dockerfile
@@ -1,4 +1,5 @@
-FROM ubuntu22
+ARG REPOSITORY=key4hep/key4hep-images
+FROM ${REPOSITORY}/ubuntu22
 
 RUN apt update && \
     apt install -y lsb-release && \
