--- a/.github/workflows/image-creator.yml
+++ b/.github/workflows/image-creator.yml
@@ -21,128 +21,45 @@ jobs:
   # Image for running key4hep
   build:
     strategy:
+      fail-fast: false
       matrix:
         image: ["alma9", "ubuntu22", "ubuntu24"]
-      fail-fast: false
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      - name: Login to DockerHub
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Docker Meta
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.REGISTRY }}/${{ github.repository_owner }}/key4hep-images/${{ matrix.image }}
-      - name: Build and Push
-        id: docker_build
-        uses: docker/build-push-action@v6
-        with:
-          push: true
-          context: ./Docker/${{ matrix.image }}/${{ matrix.image }}-build
-          file: ./Docker/${{ matrix.image }}/${{ matrix.image }}-build/Dockerfile
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+    uses: ./.github/workflows/image-template.yml
+    with:
+      registry: ${{ env.REGISTRY }}
+      image: ${{ matrix.image }}
+      runner: ubuntu-latest
   build-cvmfs:
     needs: build
     strategy:
+      fail-fast: false
       matrix:
         image: ["alma9", "ubuntu22", "ubuntu24"]
-      fail-fast: false
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      - name: Login to DockerHub
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Docker Meta
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.REGISTRY }}/${{ github.repository_owner }}/key4hep-images/${{ matrix.image }}-cvmfs
-      - name: Build and Push
-        id: docker_build
-        uses: docker/build-push-action@v6
-        with:
-          push: true
-          context: ./Docker/${{ matrix.image }}/${{ matrix.image }}-cvmfs
-          file: ./Docker/${{ matrix.image }}/${{ matrix.image }}-cvmfs/Dockerfile
-          build-args: |
-            REPOSITORY=${{ github.repository }}
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+    uses: ./.github/workflows/image-template.yml
+    with:
+      registry: ${{ env.REGISTRY }}
+      image: ${{ matrix.image }}-cvmfs
+      runner: ubuntu-latest
   build-arm:
     needs: build
     strategy:
+      fail-fast: false
       matrix:
         image: ["alma9", "ubuntu22", "ubuntu24"]
-      fail-fast: false
-    runs-on: ubuntu-24.04-arm
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      - name: Login to DockerHub
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Docker Meta
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.REGISTRY }}/${{ github.repository_owner }}/key4hep-images/${{ matrix.image }}-arm
-      - name: Build and Push
-        id: docker_build
-        uses: docker/build-push-action@v6
-        with:
-          push: true
-          context: ./Docker/${{ matrix.image }}/${{ matrix.image }}-build
-          file: ./Docker/${{ matrix.image }}/${{ matrix.image }}-build/Dockerfile
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+    uses: ./.github/workflows/image-template.yml
+    with:
+      registry: ${{ env.REGISTRY }}
+      image: ${{ matrix.image }}-arm
+      runner: ubuntu-24.04-arm
   build-arm-cvmfs:
     needs: build-arm
     strategy:
+      fail-fast: false
       matrix:
         image: ["alma9", "ubuntu22", "ubuntu24"]
-      fail-fast: false
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      - name: Login to DockerHub
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Docker Meta
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.REGISTRY }}/${{ github.repository_owner }}/key4hep-images/${{ matrix.image }}-arm-cvmfs
-      - name: Build and Push
-        id: docker_build
-        uses: docker/build-push-action@v6
-        with:
-          push: true
-          context: ./Docker/${{ matrix.image }}/${{ matrix.image }}-cvmfs
-          file: ./Docker/${{ matrix.image }}/${{ matrix.image }}-cvmfs/Dockerfile
-          build-args: |
-            REPOSITORY=${{ github.repository }}
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+    uses: ./.github/workflows/image-template.yml
+    with:
+      registry: ${{ env.REGISTRY }}
+      image: ${{ matrix.image }}-arm-cvmfs
+      runner: ubuntu-24.04-arm
+    
