--- a/.github/workflows/image-template.yml
+++ b/.github/workflows/image-template.yml
@@ -25,14 +25,14 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v3
         with:
-          registry: ${{ inputs.registry }}
+          registry: ${{ env.registry }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Docker Meta
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ inputs.registry }}/${{ github.repository_owner }}/key4hep-images/${{ inputs.image }}
+          images: ${{ env.registry }}/${{ github.repository_owner }}/key4hep-images/${{ inputs.image }}
       - name: Build and Push
         id: docker_build
         uses: docker/build-push-action@v6
