--- a/.github/workflows/image-creator.yml
+++ b/.github/workflows/image-creator.yml
@@ -24,6 +24,7 @@ jobs:
     uses: ./.github/workflows/image-template.yml
     with:
       image: ${{ matrix.image }}
+      image-type: build
       runner: ubuntu-latest
   build-cvmfs:
     needs: build
@@ -33,7 +34,8 @@ jobs:
         image: ["alma9", "ubuntu22", "ubuntu24"]
     uses: ./.github/workflows/image-template.yml
     with:
-      image: ${{ matrix.image }}-cvmfs
+      image: ${{ matrix.image }}
+      image-type: cvmfs
       runner: ubuntu-latest
   build-arm:
     needs: build
@@ -43,7 +45,8 @@ jobs:
         image: ["alma9", "ubuntu22", "ubuntu24"]
     uses: ./.github/workflows/image-template.yml
     with:
-      image: ${{ matrix.image }}-arm
+      image: ${{ matrix.image }}
+      image-type: build
       runner: ubuntu-24.04-arm
   build-arm-cvmfs:
     needs: build-arm
@@ -53,6 +56,7 @@ jobs:
         image: ["alma9", "ubuntu22", "ubuntu24"]
     uses: ./.github/workflows/image-template.yml
     with:
-      image: ${{ matrix.image }}-arm-cvmfs
+      image: ${{ matrix.image }}
+      image-type: cvmfs
       runner: ubuntu-24.04-arm
     
