--- a/.github/workflows/image-template.yml
+++ b/.github/workflows/image-template.yml
@@ -13,9 +13,6 @@ on:
         required: true
         type: string
 
-env:
-  REGISTRY: ghcr.io
-
 jobs:
   build:
     runs-on: ${{ inputs.runner }}
@@ -28,14 +25,14 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v3
         with:
-          registry: ${{ env.REGISTRY }}
+          registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Docker Meta
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ env.REGISTRY }}/${{ github.repository_owner }}/key4hep-images/${{ inputs.image }}
+          images: ghcr.io/${{ github.repository_owner }}/key4hep-images/${{ inputs.image }}
       - name: Build and Push
         id: docker_build
         uses: docker/build-push-action@v6
