--- a/.github/workflows/image-creator.yml
+++ b/.github/workflows/image-creator.yml
@@ -25,38 +25,15 @@ jobs:
     with:
       image: ${{ matrix.image }}
       image-type: build
-      runner: ubuntu-latest
   build-cvmfs:
     needs: build
     strategy:
       fail-fast: false
       matrix:
         image: ["alma9", "ubuntu22", "ubuntu24"]
+        platform: ["linux/amd64", "linux/arm64"]
     uses: ./.github/workflows/image-template.yml
     with:
       image: ${{ matrix.image }}
       image-type: cvmfs
-      runner: ubuntu-latest
-  build-arm:
-    needs: build
-    strategy:
-      fail-fast: false
-      matrix:
-        image: ["alma9", "ubuntu22", "ubuntu24"]
-    uses: ./.github/workflows/image-template.yml
-    with:
-      image: ${{ matrix.image }}
-      image-type: build
-      runner: ubuntu-24.04-arm
-  build-arm-cvmfs:
-    needs: build-arm
-    strategy:
-      fail-fast: false
-      matrix:
-        image: ["alma9", "ubuntu22", "ubuntu24"]
-    uses: ./.github/workflows/image-template.yml
-    with:
-      image: ${{ matrix.image }}
-      image-type: cvmfs
-      runner: ubuntu-24.04-arm
-    
+  
