--- a/.github/workflows/image-template.yml
+++ b/.github/workflows/image-template.yml
@@ -9,7 +9,9 @@ on:
       image-type:
         required: true
         type: string
-
+      platform:
+        required: true
+        type: string
 env:
   REGISTRY: ghcr.io
 
@@ -32,13 +34,13 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ env.REGISTRY }}/${{ github.repository_owner }}/key4hep-images/${{ inputs.image }}
+          images: ${{ env.REGISTRY }}/${{ github.repository_owner }}/key4hep-images/${{ inputs.image }}-${{ inputs.image-type }}
       - name: Build and Push
         id: docker_build
         uses: docker/build-push-action@v6
         with:
           push: true
-          platforms: ["linux/amd64", "linux/arm64"]
+          platforms: ${{ inputs.platform }}
           file: ./Docker/${{ inputs.image }}/${{ inputs.image }}-${{ inputs.image-type }}/Dockerfile
           build-args: |
             REGISTRY=${{ env.REGISTRY }}
