--- a/.github/workflows/image-creator.yml
+++ b/.github/workflows/image-creator.yml
@@ -14,29 +14,91 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
+env:
+  REGISTRY: ghcr.io
+
 jobs:
   # Image for running key4hep
-  build:
+  setup:
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
         image: ["alma9", "ubuntu22", "ubuntu24"]
         platform: ["linux/amd64", "linux/arm64"]
-    uses: ./.github/workflows/image-template.yml
-    with:
-      image: ${{ matrix.image }}
-      platform: ${{ matrix.platform }}
-      image-type: build
+    outputs:
+      runner: ${{ steps.step1.outputs.runner }}
+    steps:
+      - name: Check platform
+        id: step1
+        run: |
+          if [ ${{ matrix.platform }} == 'linux/amd64' ]; then
+            echo "runner=ubuntu-latest" >> $GITHUB_OUTPUT
+          else
+            echo "runner=ubuntu-24.04-arm" >> $GITHUB_OUTPUT
+          fi
+  build:
+    needs: setup
+    runs-on: ${{ needs.setup.outputs.runner }}
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Login to DockerHub
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Docker Meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ github.repository_owner }}/key4hep-images/${{ matrix.image }}
+      - name: Build and Push
+        id: docker_build
+        uses: docker/build-push-action@v6
+        with:
+          push: true
+          platforms: ${{ matrix.platform }}
+          file: ./Docker/${{ matrix.image }}/${{ matrix.image }}-build/Dockerfile
+          build-args: |
+            REGISTRY=${{ env.REGISTRY }}
+            REPOSITORY=${{ github.repository }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
   build-cvmfs:
     needs: build
+    runs-on: ${{ needs.setup.outputs.runner }}
     strategy:
       fail-fast: false
       matrix:
         image: ["alma9", "ubuntu22", "ubuntu24"]
         platform: ["linux/amd64", "linux/arm64"]
-    uses: ./.github/workflows/image-template.yml
-    with:
-      image: ${{ matrix.image }}
-      platform: ${{ matrix.platform }}
-      image-type: cvmfs
-  
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Login to DockerHub
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Docker Meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ github.repository_owner }}/key4hep-images/${{ matrix.image }}
+      - name: Build and Push
+        id: docker_build
+        uses: docker/build-push-action@v6
+        with:
+          push: true
+          platforms: ${{ matrix.platform }}
+          file: ./Docker/${{ matrix.image }}/${{ matrix.image }}-cvmfs/Dockerfile
+          build-args: |
+            REGISTRY=${{ env.REGISTRY }}
+            REPOSITORY=${{ github.repository }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
