--- a/.github/workflows/image-creator.yml
+++ b/.github/workflows/image-creator.yml
@@ -24,7 +24,8 @@ jobs:
       fail-fast: true
       matrix:
         image: ["alma9", "ubuntu22", "ubuntu24"]
-    runs-on: ubuntu-latest
+        os: ["ubuntu-latest", "ubuntu-24.04-arm"]
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
       - name: Set up Docker Buildx
@@ -45,7 +46,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           push: true
-          platforms: linux/amd64,linux/arm64
+          platforms: ${{ runner.os }}/${{ runner.arch }}
           context: ./Docker/${{ matrix.image }}/${{ matrix.image }}-build
           file: ./Docker/${{ matrix.image }}/${{ matrix.image }}-build/Dockerfile
           build-args: |
@@ -59,7 +60,8 @@ jobs:
       fail-fast: false
       matrix:
         image: ["alma9", "ubuntu22", "ubuntu24"]
-    runs-on: ubuntu-latest
+        os: ["ubuntu-latest", "ubuntu-24.04-arm"]
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
       - name: Set up Docker Buildx
@@ -80,7 +82,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           push: true
-          platforms: linux/amd64,linux/arm64
+          platforms: ${{ runner.os }}/${{ runner.arch }}
           context: ./Docker/${{ matrix.image }}/${{ matrix.image }}-build
           file: ./Docker/${{ matrix.image }}/${{ matrix.image }}-cvmfs/Dockerfile
           build-args: |
