--- a/.github/workflows/image-creator.yml
+++ b/.github/workflows/image-creator.yml
@@ -141,6 +141,10 @@ jobs:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Extract branch name
+        shell: bash
+        run: echo "branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_OUTPUT
+        id: extract_branch
       - name: Docker Meta
         id: meta
         uses: docker/metadata-action@v5
@@ -157,5 +161,6 @@ jobs:
           build-args: |
             REGISTRY=${{ env.REGISTRY }}
             REPOSITORY=${{ github.repository }}
+            BRANCH=${{ steps.extract_branch.outputs.branch }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
