--- a/.github/workflows/image-creator.yml
+++ b/.github/workflows/image-creator.yml
@@ -87,6 +87,7 @@ jobs:
             REGISTRY=${{ env.REGISTRY }}
             REPOSITORY=${{ github.repository }}
             BRANCH=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] }}
+            TYPE=
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
   # Image for running key4hep
@@ -159,5 +160,6 @@ jobs:
             REGISTRY=${{ env.REGISTRY }}
             REPOSITORY=${{ github.repository }}
             BRANCH=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] }}
+            TYPE=-arm
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
