--- a/Docker/ubuntu24/ubuntu24-cvmfs/Dockerfile
+++ b/Docker/ubuntu24/ubuntu24-cvmfs/Dockerfile
@@ -1,7 +1,8 @@
 ARG REGISTRY=ghcr.io
 ARG REPOSITORY=key4hep/key4hep-images
 ARG BRANCH=main
-FROM ${REGISTRY}/${REPOSITORY}/ubuntu24:${BRANCH}
+ARG TYPE=
+FROM ${REGISTRY}/${REPOSITORY}/ubuntu24${TYPE}:${BRANCH}
 
 RUN apt update && \
     apt install -y lsb-release && \
