--- a/Docker/alma9/alma9-cvmfs/Dockerfile
+++ b/Docker/alma9/alma9-cvmfs/Dockerfile
@@ -1,7 +1,8 @@
 ARG REGISTRY=ghcr.io
 ARG REPOSITORY=key4hep/key4hep-images
 ARG BRANCH=main
-FROM ${REGISTRY}/${REPOSITORY}/alma9:${BRANCH}
+ARG TYPE=
+FROM ${REGISTRY}/${REPOSITORY}/alma9${TYPE}:${BRANCH}
 
 RUN dnf install -y https://ecsft.cern.ch/dist/cvmfs/cvmfs-release/cvmfs-release-latest.noarch.rpm && \
     dnf install -y cvmfs && \
