--- a/Docker/alma9/alma9-build/Dockerfile
+++ b/Docker/alma9/alma9-build/Dockerfile
@@ -16,7 +16,7 @@ RUN dnf update -y && \
                    # Needed by Spack
                    bzip2 unzip \
                    # Needed by LCG
-                   zlib-devel libuuid-devel && \
+                   zlib-devel libuuid-devel \
                    # Useful to have
                    strace && \
     # For building and CI
