removed type as we build multi-arch images

--- a/Docker/ubuntu24/ubuntu24-cvmfs/Dockerfile
+++ b/Docker/ubuntu24/ubuntu24-cvmfs/Dockerfile
@@ -2,7 +2,7 @@ ARG REGISTRY=ghcr.io
 ARG REPOSITORY=key4hep/key4hep-images
 ARG BRANCH=main
 ARG TYPE=
-FROM ${REGISTRY}/${REPOSITORY}/ubuntu24${TYPE}:${BRANCH}
+FROM ${REGISTRY}/${REPOSITORY}/ubuntu24:${BRANCH}
 
 RUN apt update && \
     apt install -y lsb-release && \
