--- a/Docker/ubuntu22/ubuntu22-cvmfs/Dockerfile
+++ b/Docker/ubuntu22/ubuntu22-cvmfs/Dockerfile
@@ -2,7 +2,7 @@ ARG REGISTRY=ghcr.io
 ARG REPOSITORY=key4hep/key4hep-images
 ARG BRANCH=main
 ARG TYPE=
-FROM ${REGISTRY}/${REPOSITORY}/ubuntu22${TYPE}:${BRANCH}
+FROM ${REGISTRY}/${REPOSITORY}/ubuntu22:${BRANCH}
 
 RUN apt update && \
     apt install -y lsb-release && \
