--- a/Docker/ubuntu22/ubuntu22-cvmfs/Dockerfile
+++ b/Docker/ubuntu22/ubuntu22-cvmfs/Dockerfile
@@ -1,7 +1,7 @@
 ARG REGISTRY=ghcr.io
 ARG REPOSITORY=key4hep/key4hep-images
 ARG BRANCH=main
-FROM ${REGISTRY}/${REPOSITORY}/ubuntu22:${BRANCH}
+FROM ${REGISTRY}/${REPOSITORY}/ubuntu22:latest
 
 RUN apt update && \
     apt install -y lsb-release && \
